--- a/bo.html
+++ b/bo.html
@@ -9,7 +9,7 @@
     <style>
       @import url(https://victorlee.github.io/Yalasoo-Qomolangma-Tibetan-fonts/stylesheet.css);
       main {
-        font-family: "Qomolangma-Uchen Suring", sans-serif;
+        font-family: "Qomolangma-Uchen Suring", var(--bs-font-sans-serif);
       }
       strong {
         font-family: Qomolangma-Chuyig;
@@ -40,6 +40,7 @@
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
+              <a href="cat.html">Català</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
@@ -48,10 +49,16 @@
               <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
             </li>
             <li class="breadcrumb-item">
+              <a href="uk.html">український</a>
+            </li>
+            <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -93,7 +100,7 @@
                   </td>
                   <td>
                     <a href="https://twitter.com/saeziae"
-                      ><i class="moji moji-twitter"></i>ཏྭི་ཏར་ @saeziae</a
+                      ><i class="moji moji-twitter"></i>ཐྭི་དར་ @saeziae</a
                     >
                   </td>
                 </tr>
@@ -105,20 +112,20 @@
                   </td>
                   <td>
                     <a href="https://t.me/esteladaily"
-                      ><i class="moji moji-telegram"></i>ཐེ་ལེ་ཀྲམ་</a
+                      ><i class="moji moji-telegram"></i>དེ་ལེ་ཀྲམ།</a
                     >
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <a href="https://space.bilibili.com/173947605"
-                      ><i class="moji moji-bilibili"></i>པི་ལི་པི་ལི་</a
+                      ><i class="moji moji-bilibili"></i>པི་ལི་པི་ལི།</a
                     >
                   </td>
                   <td>
                     <a
                       href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"
-                      ><i class="moji moji-youtube"></i>ཡུ་ཐུབ་</a
+                      ><i class="moji moji-youtube"></i>ཡུ་དུབ།</a
                     >
                   </td>
                 </tr>
