--- a/cat.html
+++ b/cat.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="h-100" lang="ru">
+<html class="h-100" lang="ca">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Домашняя страница Предгорка</title>
+    <title>Pagina de Estela (Promontana)</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
@@ -26,15 +26,15 @@
               <a href="bo.html">བོད་སྐད་</a>
               <a href="tai.html">Tai</a>
             </li>
-            <li class="breadcrumb-item">
-              <a href="es.html"><i class="moji moji-es"></i>Español</a>
-              <a href="cat.html">Català</a>
+            <li class="breadcrumb-item active">
+              <i class="moji moji-es"></i><a href="es.html">Castellano</a>
+              Català
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
-            <li class="breadcrumb-item active">
-              <i class="moji moji-su"></i>Русский
+            <li class="breadcrumb-item">
+              <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
             </li>
             <li class="breadcrumb-item">
               <a href="uk.html">український</a>
@@ -54,7 +54,6 @@
     </header>
     <main class="flex-shrink-0">
       <div class="container d-grid gap-3">
-        <div><h1>🇺🇦Слава людям свободи🇺🇦</h1></div>
         <div class="container-fluid d-flex justify-content-center">
           <div class="card" style="position: relative; margin-top: 80px">
             <img
@@ -72,11 +71,12 @@
             <span
               class="badge rounded-pill bg-secondary border-3"
               style="position: absolute; left: 105px; top: -25px"
-              >😔 Депрессия</span
+              >😔 Depresió</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-left: 130px">Предгорка</h2>
-              <strong>С Интернационалом, воспрянет род людской!</strong>
+              <h2 class="card-title" style="margin-left: 130px">
+                Estela (Promontana)
+              </h2>
               <table>
                 <tr>
                   <td>
@@ -86,7 +86,7 @@
                   </td>
                   <td>
                     <a href="https://twitter.com/saeziae"
-                      ><i class="moji moji-twitter"></i>Твиттер @saeziae</a
+                      ><i class="moji moji-twitter"></i>Twitter @saeziae</a
                     >
                   </td>
                 </tr>
@@ -98,46 +98,43 @@
                   </td>
                   <td>
                     <a href="https://t.me/esteladaily"
-                      ><i class="moji moji-telegram"></i>Группа Телеграмма</a
+                      ><i class="moji moji-telegram"></i>Grup de Telegram</a
                     >
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <a href="https://space.bilibili.com/173947605"
-                      ><i class="moji moji-bilibili"></i>Билибили</a
+                      ><i class="moji moji-bilibili"></i>Bilibili</a
                     >
                   </td>
                   <td>
                     <a
                       href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"
-                      ><i class="moji moji-youtube"></i>Ютубе</a
+                      ><i class="moji moji-youtube"></i>YouTube</a
                     >
                   </td>
                 </tr>
               </table>
-              <p>Привет, товарищ! 👋🏻 Я Предгорка</p>
+              <p>Hola! 👋🏻 Aquí està Estela.</p>
               <p>
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>
-                Гордость трансгендера. Участник
+                Orgullosa de ser trans. Contribuïdora de
                 <a href="https://mtf.wiki/">MtF-Wiki</a>.
               </p>
+              <p>M'agrada faldilla taulada(JKs). 🍱 "Gourmet".</p>
               <p>
-                🍱 "Гурман".Носитель
-                <a href="https://en.wikipedia.org/wiki/Wu_Chinese">Уского</a>
-                языка.
+                👩🏻‍🎓 Estic estudiant Castellà cas com a especialitat a la
+                universitat.
               </p>
-              <p>👩🏻‍🎓 Я изучаю испанский язык в университете.</p>
-              <p>📷 Фотография. Игрок в ритм-игры: maimai и Sound Voltex.</p>
-              <p>✈️ Я люблю путешествовать! Я побывала во многих странах.</p>
-              <p>👀 Я интересуюсь лингвистикой, NLP и другими вещами.</p>
+              <p>📷 Fotògrafa. Videojocs de ritme: maimai i Sound Voltex.</p>
+              <p>✈️ M'encanta viatjar. He viatjat a diversos continents.</p>
+              <p>👀 M'interessen lingüística, NLP, i altres coses.</p>
               <p>
-                ⌨️ <i class="moji moji-python"></i>Python<br />
-                <del
-                  ><i class="moji moji-php"></i>PHP - лучший язык в в мире!</del
-                >
+                ⌨️ <i class="moji moji-python"></i>Python
+                <i class="moji moji-php"></i>PHP
               </p>
-              <p>пользователь <i class="moji moji-archlinux"></i>ArchLinux.</p>
+              <p>Usuària de <i class="moji moji-archlinux"></i>ArchLinux.</p>
             </div>
           </div>
         </div>
@@ -158,10 +155,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted">
-          &copy;<span id="year"></span> Предгорка
-          <a href="amigos.html">Товарищи</a>
-        </span>
+        <span class="text-muted"> &copy;<span id="year"></span> Estela </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
