--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
+              <a href="cat.html">Català</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
@@ -36,10 +37,16 @@
               <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
             </li>
             <li class="breadcrumb-item">
+              <a href="uk.html">український</a>
+            </li>
+            <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -47,6 +54,7 @@
     </header>
     <main class="flex-shrink-0">
       <div class="container d-grid gap-3">
+        <div><h1>🇺🇦Слава людям свободи🇺🇦</h1></div>
         <div class="container-fluid d-flex justify-content-center">
           <div class="card" style="position: relative; margin-top: 80px">
             <img
@@ -128,7 +136,7 @@
                 Sound Voltex.
               </p>
               <p>✈️ I love travelling! I've travelled to many countries.</p>
-              <p>👀 Interested in linguistics, NLP and ML, and other things.</p>
+              <p>👀 Interested in linguistics, NLP and other things.</p>
               <p>
                 ⌨️ <i class="moji moji-python"></i>Python<br />
                 <del
