--- a/ug-uly.html
+++ b/ug-uly.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
-<html class="h-100" lang="ru">
+<!DOchTYPE html>
+<html class="h-100" lang="ug-latn">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Домашняя страница Предгорка</title>
+    <title>shanchenning tor bët</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
+      .sociales a {
+        text-decoration: none;
+      }
       .card img {
         max-width: 100%;
       }
@@ -22,19 +25,19 @@
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
-              <a href="ug.html">ئۇيغۇرچە</a>
+              Uyghurche
               <a href="bo.html">བོད་སྐད་</a>
               <a href="tai.html">Tai</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
-              <a href="cat.html">Català</a>
+              <a href="cat.html">chatalà</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+              <a href="ar.html"><i class="moji moji-ar"></i>alعrbyة</a>
             </li>
-            <li class="breadcrumb-item active">
-              <i class="moji moji-su"></i>Русский
+            <li class="breadcrumb-item">
+              <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
             </li>
             <li class="breadcrumb-item">
               <a href="uk.html">український</a>
@@ -50,11 +53,16 @@
             </li>
           </ol>
         </nav>
+        <div class="btn-group justify-content-end">
+          <a class="btn btn-outline-primary btn-sm active">Latin Yëziqi</a>
+          <a href="ug.html" class="btn btn-outline-primary btn-sm"
+            >ئەرەب يېزىقى</a
+          >
+        </div>
       </div>
     </header>
     <main class="flex-shrink-0">
       <div class="container d-grid gap-3">
-        <div><h1>🇺🇦Слава людям свободи🇺🇦</h1></div>
         <div class="container-fluid d-flex justify-content-center">
           <div class="card" style="position: relative; margin-top: 80px">
             <img
@@ -64,20 +72,19 @@
                 width: 100x;
                 position: absolute;
                 top: -50px;
-                left: 30px;
+                right: 30px;
                 border-radius: 50%;
                 border: 1px solid #ddd;
               "
             />
             <span
               class="badge rounded-pill bg-secondary border-3"
-              style="position: absolute; left: 105px; top: -25px"
-              >😔 Депрессия</span
+              style="position: absolute; right: 105px; top: -25px"
+              >😔 Xushal yoq</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-left: 130px">Предгорка</h2>
-              <strong>С Интернационалом, воспрянет род людской!</strong>
-              <table>
+              <h2 class="card-title" style="margin-right: 130px">Shanchen</h2>
+              <table class="sociales">
                 <tr>
                   <td>
                     <a href="https://github.com/saeziae"
@@ -86,7 +93,7 @@
                   </td>
                   <td>
                     <a href="https://twitter.com/saeziae"
-                      ><i class="moji moji-twitter"></i>Твиттер @saeziae</a
+                      ><i class="moji moji-twitter"></i>Twitter @saeziae</a
                     >
                   </td>
                 </tr>
@@ -98,59 +105,63 @@
                   </td>
                   <td>
                     <a href="https://t.me/esteladaily"
-                      ><i class="moji moji-telegram"></i>Группа Телеграмма</a
+                      ><i class="moji moji-telegram"></i>telegram-ning
+                      guruppa</a
                     >
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <a href="https://space.bilibili.com/173947605"
-                      ><i class="moji moji-bilibili"></i>Билибили</a
+                      ><i class="moji moji-bilibili"></i>Bilibili</a
                     >
                   </td>
                   <td>
                     <a
-                      href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"
-                      ><i class="moji moji-youtube"></i>Ютубе</a
+                      href="https://www.youtube.com/channel/UchnqO6MvMqQ9pXKcwjp_gLBQ"
+                      ><i class="moji moji-youtube"></i>Youtube</a
                     >
                   </td>
                 </tr>
               </table>
-              <p>Привет, товарищ! 👋🏻 Я Предгорка</p>
+              <p>Qarshi alimiz! 👋🏻 Men shanchen.</p>
               <p>
-                <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>
-                Гордость трансгендера. Участник
-                <a href="https://mtf.wiki/">MtF-Wiki</a>.
+                <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i
+                >Ghururluq
+                <a href="https://tr.wikipedia.org/wiki/Transseks%C3%BCellik"
+                  >kwashingbeliq</a
+                >. <a href="https://mtf.wiki/">MtF-Wiki</a>-ning eza.
               </p>
+              <p>Yopkani söymen. 🍱 «Ghalcha».</p>
+              <p>👩🏻‍🎓 Men uniwërsitëtta ispanchen ögenwatmen.</p>
+              <p>📷 Süretke almaq. muzika oyun.</p>
               <p>
-                🍱 "Гурман".Носитель
-                <a href="https://en.wikipedia.org/wiki/Wu_Chinese">Уского</a>
-                языка.
+                ✈️ Men sayahetti yaxshi körimen. Men nurghun jaylargha sayahet
+                qilgen.
               </p>
-              <p>👩🏻‍🎓 Я изучаю испанский язык в университете.</p>
-              <p>📷 Фотография. Игрок в ритм-игры: maimai и Sound Voltex.</p>
-              <p>✈️ Я люблю путешествовать! Я побывала во многих странах.</p>
-              <p>👀 Я интересуюсь лингвистикой, NLP и другими вещами.</p>
+              <p>👀 Men tilshunasliqqa qiziqimen.</p>
               <p>
-                ⌨️ <i class="moji moji-python"></i>Python<br />
-                <del
-                  ><i class="moji moji-php"></i>PHP - лучший язык в в мире!</del
-                >
+                ⌨️
+                <i class="moji moji-python"></i>Python
+                <i class="moji moji-php"></i>PHP
               </p>
-              <p>пользователь <i class="moji moji-archlinux"></i>ArchLinux.</p>
+              <p><i class="moji moji-archlinux"></i>ArchLinux</p>
+              <p>🇨🇳 Milletler ittipaqliqi.</p>
             </div>
           </div>
         </div>
-        <div class="container-fluid d-flex justify-content-center">
-          <div class="card">
-            <div class="card-header">
-              <i class="moji moji-github"></i>
-            </div>
-            <div class="card-body">
-              <img src="https://estela.moe/fetchgraph.php" />
-              <img
-                src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
-              />
+        <div class="container d-grid gap-3">
+          <div class="container-fluid d-flex justify-content-center">
+            <div class="card">
+              <div class="card-header">
+                <i class="moji moji-github"></i>
+              </div>
+              <div class="card-body">
+                <img src="https://estela.moe/fetchgraph.php" />
+                <img
+                  src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -158,10 +169,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted">
-          &copy;<span id="year"></span> Предгорка
-          <a href="amigos.html">Товарищи</a>
-        </span>
+        <span class="text-muted"> &copy;<span id="year"></span> Estela </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
