--- a/ug.html
+++ b/ug.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html class="h-100" dir="rtl" lang="ug">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>شانچەننىڭ تور بېت</title>
-    <link href="assets/moji.css" rel="stylesheet">
-    <link href="assets/bootstrap.rtl.min.css" rel="stylesheet">
+    <link href="assets/moji.css" rel="stylesheet" />
+    <link href="assets/bootstrap.rtl.min.css" rel="stylesheet" />
     <style>
-        @import url("https://fonts.googleapis.com/css2?family=Amiri&family=Noto+Sans");
-        main{
-            font-family:'Noto Sans','Amiri','Noto Sans Arabic',sans-serif;
-        }
-        .sociales a {
-            text-decoration: none;
-        }
-        .card img {
+      @import url("https://fonts.googleapis.com/css2?family=Amiri&family=Noto+Sans");
+      main {
+        font-family: "Noto Sans", "Amiri", "Noto Sans Arabic",
+          var(--bs-font-sans-serif);
+      }
+      .sociales a {
+        text-decoration: none;
+      }
+      .card img {
         max-width: 100%;
       }
     </style>
-</head>
-<body class="d-flex flex-column h-100">
+  </head>
+  <body class="d-flex flex-column h-100">
     <header class="header">
-        <div class="container navbar d-flex">
-            <nav class="justify-content-start" aria-label="breadcrumb">
+      <div class="container navbar d-flex">
+        <nav class="justify-content-start" aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item">
               <a href="index.html"><i class="moji moji-uk"></i>English</a>
@@ -35,84 +36,152 @@
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
+              <a href="cat.html">Català</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
             <li class="breadcrumb-item">
-                <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
-              </li>
+              <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
+            </li>
             <li class="breadcrumb-item">
-                <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
-              </li>
-              <li class="breadcrumb-item">
-                <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
-              </li>
+              <a href="uk.html">український</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ja.html">日本語</a>
+            </li>
           </ol>
-            </nav>
+        </nav>
+        <div class="btn-group justify-content-end">
+          <a href="ug-uly.html" class="btn btn-outline-primary btn-sm"
+            >Latin Yëziqi</a
+          >
+          <a class="btn btn-outline-primary btn-sm active">ئەرەب يېزىقى</a>
         </div>
+      </div>
     </header>
     <main class="flex-shrink-0">
-        <div class="container d-grid gap-3">
-            <div class="container-fluid d-flex justify-content-center">
-                <div class="card" style="position:relative;margin-top:80px;">
-                    <img src="assets/images/head.jpg" style="height: 100px;width: 100x; position: absolute; top:-50px;right:30px;border-radius: 50%;border: 1px solid #ddd" />
-                    <span class="badge rounded-pill bg-secondary border-3" style="position: absolute;right:105px;top:-25px">😔 خۇشال يوق</span>
-                    <div class="card-body">
-                        <h2 class="card-title" style="margin-right: 130px;">شانچەن</h2>
-                        <table class="sociales">
-                            <tr>
-                                <td><a href="https://github.com/saeziae"><i class="moji moji-github"></i>GitHub saeziae</a></td>
-                                <td><a href="https://twitter.com/saeziae"><i class="moji moji-twitter"></i>تۋىتېر @saeziae</a></td>
-                            </tr>
-                            <tr>
-                                <td> <a href="mailto:i@estela.cn"><i class="moji moji-mail"></i>i@estela.cn</a></td>
-                                    <td><a href="https://t.me/esteladaily"><i class="moji moji-telegram"></i>تېلېگراممانىڭ گۇرۇپپا</a></td>
-                            </tr>
-                            <tr>
-                                <td><a href="https://space.bilibili.com/173947605"><i class="moji moji-bilibili"></i>بىلىبىلى</a></td>
-                                <td><a href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"><i class="moji moji-youtube"></i>يۇتۇب</a></td>
-                            </tr>
-                        </table>
-                        </p>
-                        <p>قارشى ئالىمىز! 👋🏻 مەن شانچەن. </p>
-                        <p><i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>غۇرۇرلۇق كۋاشىڭبەلىق. <a href="https://mtf.wiki/">MtF-Wiki</a>-نىڭ ئەزا.</p>
-                        <p>يوپكانى سۆيمەن. 🍱 «غالچا».</p>
-                        <p>👩🏻‍🎓  مەن ئۇنىۋېرسىتېتتا ئىسپانچەن ئۆگەنۋاتمەن.</p>
-                        <p>📷 سۈرەتكە ئالماق. مۇزىكا ئويۇن.</p>
-                        <p>✈️ مەن ساياھەتتى ياخشى كۆرىمەن. مەن نۇرغۇن جايلارغا ساياھەت قىلگەن.</p>
-                        <p>👀 مەن تىلشۇناسلىققا قىزىقىمەن.</p>
-                        <p>⌨️ <span dir="ltr"><i class="moji moji-python"></i>Python <i class="moji moji-php"></i>PHP</span></p>
-                        <p><i class="moji moji-archlinux"></i>ArchLinux</p>
-                        <p>🇨🇳 أمىللەتلەر ئىتتىپاقلىقى.</p>
-                    </div>
-                </div>
+      <div class="container d-grid gap-3">
+        <div class="container-fluid d-flex justify-content-center">
+          <div class="card" style="position: relative; margin-top: 80px">
+            <img
+              src="assets/images/head.jpg"
+              style="
+                height: 100px;
+                width: 100x;
+                position: absolute;
+                top: -50px;
+                right: 30px;
+                border-radius: 50%;
+                border: 1px solid #ddd;
+              "
+            />
+            <span
+              class="badge rounded-pill bg-secondary border-3"
+              style="position: absolute; right: 105px; top: -25px"
+              >😔 خۇشال يوق</span
+            >
+            <div class="card-body">
+              <h2 class="card-title" style="margin-right: 130px">شانچەن</h2>
+              <table class="sociales">
+                <tr>
+                  <td>
+                    <a href="https://github.com/saeziae"
+                      ><i class="moji moji-github"></i>GitHub saeziae</a
+                    >
+                  </td>
+                  <td>
+                    <a href="https://twitter.com/saeziae"
+                      ><i class="moji moji-twitter"></i>تۋىتېر @saeziae</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="mailto:i@estela.cn"
+                      ><i class="moji moji-mail"></i>i@estela.cn</a
+                    >
+                  </td>
+                  <td>
+                    <a href="https://t.me/esteladaily"
+                      ><i class="moji moji-telegram"></i>تېلېگراممانىڭ
+                      گۇرۇپپا</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://space.bilibili.com/173947605"
+                      ><i class="moji moji-bilibili"></i>بىلىبىلى</a
+                    >
+                  </td>
+                  <td>
+                    <a
+                      href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"
+                      ><i class="moji moji-youtube"></i>يۇتۇب</a
+                    >
+                  </td>
+                </tr>
+              </table>
+              <p>قارشى ئالىمىز! 👋🏻 مەن شانچەن.</p>
+              <p>
+                <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i
+                >غۇرۇرلۇق
+                <a href="https://tr.wikipedia.org/wiki/Transseks%C3%BCellik"
+                  >كۋاشىڭبەلىق</a
+                >. <a href="https://mtf.wiki/">MtF-Wiki</a>-نىڭ ئەزا.
+              </p>
+              <p>يوپكانى سۆيمەن. 🍱 «غالچا».</p>
+              <p>👩🏻‍🎓 مەن ئۇنىۋېرسىتېتتا ئىسپانچەن ئۆگەنۋاتمەن.</p>
+              <p>📷 سۈرەتكە ئالماق. مۇزىكا ئويۇن.</p>
+              <p>
+                ✈️ مەن ساياھەتتى ياخشى كۆرىمەن. مەن نۇرغۇن جايلارغا ساياھەت
+                قىلگەن.
+              </p>
+              <p>👀 مەن تىلشۇناسلىققا قىزىقىمەن.</p>
+              <p>
+                ⌨️
+                <span dir="ltr"
+                  ><i class="moji moji-python"></i>Python
+                  <i class="moji moji-php"></i>PHP</span
+                >
+              </p>
+              <p><i class="moji moji-archlinux"></i>ArchLinux</p>
+              <p>🇨🇳 مىللەتلەر ئىتتىپاقلىقى.</p>
             </div>
-            <div class="container d-grid gap-3">
-                <div class="container-fluid d-flex justify-content-center">
-                    <div class="card">
-                        <div class="card-header">
-                            <i class="moji moji-github"></i>
-                        </div>
-                        <div class="card-body">
-                            <img src="https://estela.moe/fetchgraph.php" />
-                            <img src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true" />
-                        </div>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="container d-grid gap-3">
+          <div class="container-fluid d-flex justify-content-center">
+            <div class="card">
+              <div class="card-header">
+                <i class="moji moji-github"></i>
+              </div>
+              <div class="card-body">
+                <img src="https://estela.moe/fetchgraph.php" />
+                <img
+                  src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="footer mt-auto py-3 bg-light">
-        <div class="container">
-            <span class="text-muted">
-                &copy;<span id="year"></span> Estela
-            </span>
-        </div>
+      <div class="container">
+        <span class="text-muted"> &copy;<span id="year"></span> Estela </span>
+      </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
-</body>
-<script>
-document.getElementById("year").innerHTML = new Date().getFullYear();
-</script>
+  </body>
+  <script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+  </script>
 </html>
