--- a/uk.html
+++ b/uk.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Домашняя страница Предгорка</title>
+    <title>Домашня сторінка Передгірка</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
@@ -33,12 +33,10 @@
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
-            <li class="breadcrumb-item active">
+            <li class="breadcrumb-item">
               <i class="moji moji-su"></i>Русский
             </li>
-            <li class="breadcrumb-item">
-              <a href="uk.html">український</a>
-            </li>
+            <li class="breadcrumb-item active">український</li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
@@ -72,11 +70,10 @@
             <span
               class="badge rounded-pill bg-secondary border-3"
               style="position: absolute; left: 105px; top: -25px"
-              >😔 Депрессия</span
+              >😔 Депресія</span
             >
             <div class="card-body">
               <h2 class="card-title" style="margin-left: 130px">Предгорка</h2>
-              <strong>С Интернационалом, воспрянет род людской!</strong>
               <table>
                 <tr>
                   <td>
@@ -86,7 +83,7 @@
                   </td>
                   <td>
                     <a href="https://twitter.com/saeziae"
-                      ><i class="moji moji-twitter"></i>Твиттер @saeziae</a
+                      ><i class="moji moji-twitter"></i>Твіттер @saeziae</a
                     >
                   </td>
                 </tr>
@@ -98,46 +95,47 @@
                   </td>
                   <td>
                     <a href="https://t.me/esteladaily"
-                      ><i class="moji moji-telegram"></i>Группа Телеграмма</a
+                      ><i class="moji moji-telegram"></i>Група Телеграма</a
                     >
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <a href="https://space.bilibili.com/173947605"
-                      ><i class="moji moji-bilibili"></i>Билибили</a
+                      ><i class="moji moji-bilibili"></i>Білібілі</a
                     >
                   </td>
                   <td>
                     <a
                       href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"
-                      ><i class="moji moji-youtube"></i>Ютубе</a
+                      ><i class="moji moji-youtube"></i>Ютубі</a
                     >
                   </td>
                 </tr>
               </table>
-              <p>Привет, товарищ! 👋🏻 Я Предгорка</p>
+              <p>Привіт! 👋🏻 Я Предгорка</p>
               <p>
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>
-                Гордость трансгендера. Участник
+                Гордість трансгендеру. Учасник
                 <a href="https://mtf.wiki/">MtF-Wiki</a>.
               </p>
               <p>
-                🍱 "Гурман".Носитель
-                <a href="https://en.wikipedia.org/wiki/Wu_Chinese">Уского</a>
-                языка.
+                🍱 "Гурман".Носій
+                <a href="https://en.wikipedia.org/wiki/Wu_Chinese">Уської</a>
+                мови.
               </p>
-              <p>👩🏻‍🎓 Я изучаю испанский язык в университете.</p>
-              <p>📷 Фотография. Игрок в ритм-игры: maimai и Sound Voltex.</p>
-              <p>✈️ Я люблю путешествовать! Я побывала во многих странах.</p>
-              <p>👀 Я интересуюсь лингвистикой, NLP и другими вещами.</p>
+              <p>👩🏻‍🎓 Я вивчаю іспанську мову в університеті.</p>
+              <p>📷 Світлина. Гравець у ритм-ігри: maimai та Sound Voltex.</p>
+              <p>✈️ Я люблю подорожувати! Я побувала у багатьох країнах.</p>
+              <p>👀 Я цікавлюся лінгвістикою, NLP та іншими речами.</p>
               <p>
                 ⌨️ <i class="moji moji-python"></i>Python<br />
                 <del
-                  ><i class="moji moji-php"></i>PHP - лучший язык в в мире!</del
+                  ><i class="moji moji-php"></i>PHP - найкраща мова у
+                  світі!</del
                 >
               </p>
-              <p>пользователь <i class="moji moji-archlinux"></i>ArchLinux.</p>
+              <p>користувач <i class="moji moji-archlinux"></i>ArchLinux.</p>
             </div>
           </div>
         </div>
@@ -160,7 +158,6 @@
       <div class="container">
         <span class="text-muted">
           &copy;<span id="year"></span> Предгорка
-          <a href="amigos.html">Товарищи</a>
         </span>
       </div>
     </footer>
