--- a/zh.html
+++ b/zh.html
@@ -7,6 +7,10 @@
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC");
+      main {
+        font-family: "Noto Sans SC", var(--bs-font-sans-serif);
+      }
       .card img {
         max-width: 100%;
       }
@@ -28,6 +32,7 @@
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
+              <a href="cat.html">Català</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
@@ -36,10 +41,16 @@
               <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
             </li>
             <li class="breadcrumb-item">
+              <a href="uk.html">український</a>
+            </li>
+            <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -68,7 +79,7 @@
             <span
               class="badge rounded-pill bg-secondary border-3"
               style="position: absolute; left: 105px; top: -25px"
-              >😔 抑郁中</span
+              >😔抑郁中</span
             >
             <div class="card-body">
               <h2 class="card-title" style="margin-left: 130px">山前</h2>
