--- a/zht.html
+++ b/zht.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-100" lang="zh-Hans">
+<html class="h-100" lang="zh-Hant">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -7,6 +7,13 @@
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
+      @font-face {
+        font-family: LXGWClearGothic;
+        src: url(assets/LXGWClearGothic.woff);
+      }
+      main {
+        font-family: LXGWClearGothic, sans-serif;
+      }
       .card img {
         max-width: 100%;
       }
@@ -28,6 +35,7 @@
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
+              <a href="cat.html">Català</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
@@ -36,10 +44,16 @@
               <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
             </li>
             <li class="breadcrumb-item">
+              <a href="uk.html">український</a>
+            </li>
+            <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -68,7 +82,7 @@
             <span
               class="badge rounded-pill bg-secondary border-3"
               style="position: absolute; left: 105px; top: -25px"
-              >😔 憂鬱中</span
+              >😔憂鬱中</span
             >
             <div class="card-body">
               <h2 class="card-title" style="margin-left: 130px">山前</h2>
@@ -118,7 +132,7 @@
               </p>
               <p>JK格裙那可太喜歡了 🍱喫貨 吳語母語者</p>
               <p>👩🏻‍🎓 現在在大學攻讀西班牙語。</p>
-              <p>📷 攝影。音遊，maimai陷入中，SDVX练习中。</p>
+              <p>📷 攝影。音遊，maimai陷入中，SDVX練習中</p>
               <p>✈️ 想要周遊世界的旅行者，去過好多國家了。</p>
               <p>👀 喜歡語言學、NLP、煉丹之類亂七八糟的東西。</p>
               <p>⌨️ <i class="moji moji-python"></i>Python 一把梭</p>
