--- a/es.html
+++ b/es.html
@@ -28,6 +28,7 @@
             </li>
             <li class="breadcrumb-item active">
               <i class="moji moji-es"></i>Español
+              <a href="cat.html">Català</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
@@ -36,10 +37,16 @@
               <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
             </li>
             <li class="breadcrumb-item">
+              <a href="uk.html">український</a>
+            </li>
+            <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
@@ -126,7 +133,7 @@
                 ⌨️ <i class="moji moji-python"></i>Python
                 <i class="moji moji-php"></i>PHP
               </p>
-              <p>Usuaria de<i class="moji moji-archlinux"></i>ArchLinux.</p>
+              <p>Usuaria de <i class="moji moji-archlinux"></i>ArchLinux.</p>
             </div>
           </div>
         </div>
