--- a/tai.html
+++ b/tai.html
@@ -35,6 +35,7 @@
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
+              <a href="cat.html">Català</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
@@ -43,10 +44,16 @@
               <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
             </li>
             <li class="breadcrumb-item">
+              <a href="uk.html">український</a>
+            </li>
+            <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ja.html">日本語</a>
             </li>
           </ol>
         </nav>
